--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,8 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+dependencies {
+    classpath 'com.android.tools.build:gradle:8.0.0'
+    classpath 'com.google.gms:google-services:4.3.15'
+}
